# Warehouse_handling_robot

./: README.md  ros-noetic-woosh-msgs_1.1.4-0focal_arm64.deb
images/: handling_robot.vsdx
scripts/: auto_exec_demo.sh  auto_upstart.sh  set_exe_of_scripts.sh
source/: Aruco码.docx  requirements.txt  tool_coordinate_system_left.txt  tool_coordinate_system_right.txt  tree_special_files.txt  物料链接.xls
src/body_handling_control/servo_control/: README_SERVO.md
src/body_handling_demo/: CMakeLists.txt  package.xml
src/body_handling_demo/config/: joints.yaml  poses.yaml
src/body_handling_demo/launch/: body_handling_action.launch  body_handling_change.launch  body_handling_detect.launch  body_handling_double_gripper.launch  body_handling_driver.launch
src/body_handling_demo/scripts/: body_handling_action copy.py  body_handling_action.py  body_handling_change.py  body_handling_detect.py  calculate_position.py  cam_double_gripper.py  realsense_double_gripper.py  robot_detect.py  test.py  woosh_api_test.py  woosh_step_ros_control.py
src/body_handling_demo/src/: test.cpp
src/cam_vision/: README.md
src/d435_control/: README_D435.md
src/tf_transform/: README.md
src/tf_transform/tf_msgs/: CMakeLists.txt  package.xml
src/tf_transform/tf_msgs/action/: Shoot.action
src/tf_transform/tf_msgs/msg/: GraspPose.msg  TargetResult.msg
src/tf_transform/tf_msgs/srv/: ControlArm.srv  ControlArmMoveitPose.srv  ControlArmMoveitTarget.srv  ControlGripper.srv  ControlLift.srv  Ldle_Action.srv  Target2Agv.srv  Target2Base.srv  TargetDetect.srv  WaterAgv.srv
(+51 files in other folders)
