<?xml version="1.0"?>
<package format="2">
    <name>tf_msgs</name>
    <version>0.0.0</version>
    <description>The demo_behaviortree package</description>

    <maintainer email="809525028@qq.com">liao</maintainer>

    <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>geometry_msgs</depend>
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>std_msgs</depend>
    <depend>behaviortree_cpp_v3</depend>
    <depend>actionlib_msgs</depend>
    <depend>actionlib</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    

    <!-- The export tag contains other, unspecified, tags -->
    <export>

    </export>
</package>
